--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.6
 dnspython==2.2.1
 email-validator==1.3.0
 Flask==2.2.2
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.1
 greenlet==2.0.2
